changed color scheme to white and fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
 		font-family: "IBM Plex Sans", sans-serif;
 	}
 
+	*::-webkit-scrollbar {
+		display: none;
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+
 	@layer component {
 		/* Hide scrollbar for Chrome, Safari and Opera */
 		.no-scrollbar::-webkit-scrollbar {
@@ -17,6 +23,15 @@
 		.no-scrollbar {
 			-ms-overflow-style: none; /* IE and Edge */
 			scrollbar-width: none; /* Firefox */
+		}
+
+		.scrollbar-show::-webkit-scrollbar {
+			display: initial;
+		}
+
+		.scrollbar-show {
+			-ms-overflow-style: initial; /* IE and Edge */
+			scrollbar-width: initial; /* Firefox */
 		}
 	}
 
